Update API endpoint URL in index.html

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ GET /api/12345678-9
     }
 </style>
 <script>
-    document.querySelector('#url').textContent = window.location.href + '/api/';
+    document.querySelector('#url').textContent = window.location.href + 'api/';
     const button = document.querySelector('button');
     const input = document.querySelector('input');
     const response = document.querySelector('#response');
